--- a/app/public/locales/en/translation.json
+++ b/app/public/locales/en/translation.json
@@ -15,6 +15,7 @@
     "lightMode": "Light Mode",
     "darkMode": "Dark Mode",
     "footerText": "All rights reserved",
+    "dateTime": "{{value, datetime(year: numeric; month: numeric; day: numeric; hour: numeric; minute: numeric; second: numeric)}}",
     "roles": {
       "captain": "Captain",
       "manager": "Manager",
@@ -48,7 +49,12 @@
     "error": {
       "error": "Error",
       "unableView": "Unable to view ",
-      "unableEdit": "Unable to edit "
+      "unableEdit": "Unable to edit ",
+      "requiredField": "This field is required",
+      "fieldLessThan_one": "This field must be less than 1 character",
+      "fieldLessThan_other": "This field must be less than {{count, number}} characters",
+      "fieldMoreThan_one": "This field must be more than 1 character",
+      "fieldMoreThan_other": "This field must be more than {{count, number}} characters"
     },
     "info": {
       "noUsersAssociatedWith": "No users associated with this",
