Custom login theme, remove lodash

--- a/app/public/locales/en-GB/translation.json
+++ b/app/public/locales/en-GB/translation.json
@@ -1,4 +1,9 @@
 {
   "color": "colour",
-  "internationalization": "internationalisation"
+  "internationalization": "internationalisation",
+  "pages": {
+    "home": {
+      "subTitle": "Welcome to the Appcket home page ol' chap. Pip pip, cheerio!"
+    }
+  }
 }
