--- a/app/public/locales/es/translation.json
+++ b/app/public/locales/es/translation.json
@@ -26,7 +26,9 @@
       "teams": "Equipos",
       "projects": "Proyectos",
       "about": "Acerca"
-    }
+    },
+    "userInformation": "Información del usuario",
+    "userProfile": "Perfil de usuario"
   },
   "entities": {
     "organization": "Organización",
